hphp/hack/test/typecheck/reactive/mutability_flavors2_1.php.exp
File "mutability_flavors2_1.php", line 14, characters 5-6:
Variable $a is undefined, or there exists at least one control flow path reaching this point which does not define or unsets $a. (Naming[2050])
